src/test/deca/syntax/invalid/extension/Lexer_Valid/TabSansTaille.deca
// Description:
//    Tableau sans taille lors de la création
//

{
    int[] a = new float[];
}
